adjusted positioning of elements on home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
          <div class="row">
             <div class="col">
-               <h1 style="text-align: center;">Sudoku Solver</h1>
+               <h1 style="text-align: center; min-width: 1000px;">Sudoku Solver</h1>
                <hr>
             </div>
          </div>
