styled image upload button

--- a/index.html
+++ b/index.html
@@ -150,10 +150,9 @@
                 <br>
             <div class="imageupload">
             <form action="/upload-image" method="POST" enctype="multipart/form-data">
-                     <label>Select image</label>
-                        <input autocomplete="off"autocomplete="off" type="file" class="custom-file-input" name="image" id="image">
+                        <input autocomplete="off" type="file" name="image" class="custom-file-input" id="file" title=" ">
+                        <span class="file-custom"></span>
                 <br>
-                        <label class="custom-file-label" for="image">Select image...</label>
                   <button type="submit" class="btn btn-primary">Upload</button>
                </form>
                 </div>
