minor css changes to front page

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div class="container">
          <div class="row">
             <div class="col">
-               <h1 style="text-align: center; min-width: 1000px;">Sudoku Solver</h1>
+               <h1 id = "title" style="text-align: center; min-width: 1000px;">Sudoku Solver</h1>
                <hr>
             </div>
          </div>
       </div>
       <div class="grid">
-      <form name = "search" action = "/send" method = "POST">
+        <form name = "search" action = "/send" method = "POST">
             <div class="wrapper">
                 <div class="tablewrapper">
             <table cellspacing="0">
