disabled multiple file upload

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
        <form id="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
 <!--                    <label for="filebutton" class="filebuttontext">Choose File</label>-->
-                    <input id="filebutton" type="file" name="file" accept="image/*" multiple>
+                    <input id="filebutton" type="file" name="file" accept="image/*">
                     <input type="submit" value="send">
 			</form>
       </div>
