--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
       </div>
           </div>
       
-  	<p>Created by Allen Ye and Richard Cao</p>
+  	<p id = "credits">Created by Allen Ye and Richard Cao. Source code can be found <a href="https://github.com/allenye66/SudokuSolver">here</a>.</p>
    </body>
 </html>
