moved footer to under title

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          <div class="row">
             <div class="col">
                <h1 id = "title" style="text-align: center; min-width: 1000px; color: #000B4F">Sudoku Solver</h1>
+                <p id = "credits">Created by Allen Ye and Richard Cao. Source code can be found <a href="https://github.com/allenye66/SudokuSolver" target="_blank">here</a>.</p>
                <hr>
             </div>
          </div>
@@ -168,6 +169,5 @@
       </div>
           </div>
       
-  	<p id = "credits">Created by Allen Ye and Richard Cao. Source code can be found <a href="https://github.com/allenye66/SudokuSolver">here</a>.</p>
    </body>
 </html>
