--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="refresh" content="0; url= https://github.com/allenye66/allenye66.github.io/blob/master/templates/index.html">
+
+<!DOCTYPE html>
+<html>
+   <head>
+   	<meta http-equiv="refresh" content="0 ; url= https://github.com/allenye66/allenye66.github.io/blob/master/templates/index.html">
+
+   </head>
+      
+   
+</html>
