--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-   	<meta http-equiv="refresh" content="0 ; url= https://github.com/allenye66/allenye66.github.io/blob/master/templates/index.html">
+   	<meta http-equiv="refresh" content="0 ; url= https://github.com/allenye66/allenye66.github.io/templates/index.html">
 
    </head>
       
