--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-   	<meta http-equiv="refresh" content="1;url=templates/index.html">
+   	<meta http-equiv="refresh" content="1;url=allen-ye.com">
 
    </head>
       
